--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <section>
       <h3 class="section-title">Instagram</h3>
-      <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+      <p class="section-description insta-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
 
       <div class="ins-img-container">
         <div class="ins-images">
